--- a/src/base/card.css
+++ b/src/base/card.css
@@ -1,7 +1,8 @@
 @import "../styles/text-variants.css";
 @import "../styles/bg-variants.css";
 @import "../styles/border-variants.css";
-
+@import "../styles/header-class.css";
+@import "../styles/paragraph.css";
 :host {
   /* NEW in 2.0 */
   --sgds-card-bg: var(--sgds-body-bg);
@@ -12,30 +13,15 @@
   --sgds-card-box-shadow: ;
   --sgds-card-inner-border-radius: calc(var(--sgds-border-radius) - var(--sgds-border-width));
 
-  --sgds-card-body-color: ;
-  --sgds-card-body-spacer-y: 1.5rem;
-  --sgds-card-body-spacer-x: 1.5rem;
+  --sgds-card-body-color: var(--sgds-body-color);
+  --sgds-card-body-padding: 1.5rem;
 
-  --sgds-card-title-spacer-y: 0.5rem;
-  --sgds-card-title-color: ;
+  --sgds-card-title-margin-bottom: 0.5rem;
+  --sgds-card-title-color: var(--sgds-body-color);
 
-  /* Currently applies to action card only */
-  --sgds-card-subtitle-color: ;
-}
-
-h5,
-h6 {
-  color: var(--sgds-heading-color);
-  font-weight: 700;
-  margin-bottom: 0.5rem;
-  margin-top: 0;
-  font-size: 1rem;
-  line-height: 1.2;
-}
-
-p {
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  /* Currently applies to action card only 
+  as card is not using subtitle */
+  --sgds-card-subtitle-color: var(--sgds-body-color);
 }
 
 .card {
@@ -56,11 +42,11 @@ p {
 .card-body {
   color: var(--sgds-card-body-color);
   flex: 1 1 auto;
-  padding: var(--sgds-card-body-spacer-y) var(--sgds-card-body-spacer-x);
+  padding: var(--sgds-card-body-padding);
 }
 .card-title {
   color: var(--sgds-card-title-color);
-  margin-bottom: var(--sgds-card-title-spacer-y);
+  margin-bottom: var(--sgds-card-title-margin-bottom);
 }
 /* .card-subtitle {
   color: var(--sgds-card-subtitle-color);
@@ -70,10 +56,10 @@ p {
 .card-text:last-child {
   margin-bottom: 0;
 }
-slot[name="card-link"]::slotted(*) {
+/* slot[name="card-link"]::slotted(*) {
   display: flex;
   gap: var(--sgds-card-body-spacer-x);
-}
+} */
 
 slot[name="card-image"]::slotted(img) {
   border-top-left-radius: var(--sgds-card-inner-border-radius);
@@ -82,5 +68,4 @@ slot[name="card-image"]::slotted(img) {
 
 slot[name="card-link"]::slotted(*) {
   font-weight: 700;
-  /* color: var(--sgds-link) */
 }
