--- a/src/components/ActionCard/action-card.css
+++ b/src/components/ActionCard/action-card.css
@@ -1,9 +1,12 @@
 :host {
   /* NEW in 2.0 */
-  --sgds-action-card-active-border-box-shadow: var(--sgds-box-shadow), inset 0 0 0 2.1px var(--sgds-link-hover-color);
   --sgds-action-card-transition-duration: 0.3s;
+  --sgds-action-card-body-gap: 1rem;
   /* override the default value from card */
-  --sgds-card-title-spacer-y: 0;
+  --sgds-card-title-margin-bottom: 0;
+}
+:host([active]){
+  --sgds-card-box-shadow: var(--sgds-box-shadow), inset 0 0 0 2.1px var(--sgds-link);
 }
 
 .sgds.card[variant*="card-action"] {
@@ -14,7 +17,7 @@
  .card-body {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: var(--sgds-action-card-body-gap);
 }
 
 slot[name="icon"]::slotted(*){
@@ -23,7 +26,7 @@ slot[name="icon"]::slotted(*){
 .sgds.card[variant*="card-action"].is-active,
 .sgds.card[variant*="card-action"]:hover {
   border-color: transparent;
-  box-shadow: var(--sgds-action-card-active-border-box-shadow);
+  box-shadow: var(--sgds-card-box-shadow);
 }
 .sgds.card[variant*="card-action"] .card-subtitle {
   align-items: center;
