--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -13,11 +13,11 @@
   --sgds-btn-border-radius: var(--sgds-border-radius);
   --sgds-btn-disabled-color: var(--sgds-white);
   --sgds-btn-disabled-opacity: var(--sgds-disabled-opacity);
-  --sgds-btn-hover-color: ;
+  --sgds-btn-hover-color: transparent;
   --sgds-btn-hover-border-color: transparent;
-  --sgds-btn-hover-bg: ;
-  --sgds-btn-active-color: ;
-  --sgds-btn-active-bg: ;
+  --sgds-btn-hover-bg: transparent;
+  --sgds-btn-active-color: transparent;
+  --sgds-btn-active-bg: transparent;
   --sgds-btn-active-border-color: transparent;
   --sgds-btn-focus-box-shadow-color: var(--sgds-primary-300);
   --sgds-btn-focus-box-shadow: 0px 0px 0px var(--sgds-focus-width, 0.13rem) var(--sgds-btn-focus-box-shadow-color);
