--- a/src/components/ActionCard/action-card.css
+++ b/src/components/ActionCard/action-card.css
@@ -1,11 +1,11 @@
 :host {
   /* NEW in 2.0 */
   --sgds-action-card-transition-duration: 0.3s;
-  --sgds-action-card-body-gap: 1rem;
+  --sgds-action-card-body-gap: var(--sgds-spacer-3);
   /* override the default value from card */
   --sgds-card-title-margin-bottom: 0;
 }
-:host([active]){
+:host([active]) {
   --sgds-card-box-shadow: var(--sgds-box-shadow), inset 0 0 0 2.1px var(--sgds-link);
 }
 
@@ -14,13 +14,13 @@
   transition-property: box-shadow, border-color;
   transition-timing-function: ease-in-out;
 }
- .card-body {
+.card-body {
   display: flex;
   flex-direction: column;
   gap: var(--sgds-action-card-body-gap);
 }
 
-slot[name="icon"]::slotted(*){
+slot[name="icon"]::slotted(*) {
   margin-right: 1rem;
 }
 .sgds.card[variant*="card-action"].is-active,
